# cutter-vad

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  WEBSOCKET_SERVICE_IMPLEMENTATION.md  docker-compose.yml  pyproject.toml  setup_dev.py  test_complete_implementation.py
docker/: .env.example  DockerDeployRequirements.md  Dockerfile  Dockerfile.cpu  README.md  deploy.bat  deploy.sh  docker-compose.yml  quick-test.bat  quick-test.sh  requirements.txt
docker/nginx/: nginx.conf
examples/: README.md  advanced_usage.py  basic_usage.py  enhanced_demo.py  probability_demo.py  realtime_microphone_vad.py  simple_demo.py  test_python_vad_client.py
examples/audios/: SampleVoice.m4a
src/real_time_vad/: __init__.py
src/real_time_vad/core/: __init__.py  async_vad_wrapper.py  config.py  exceptions.py  silero_model.py  vad_wrapper.py
src/real_time_vad/utils/: __init__.py  audio.py  wav_writer.py
tests/: conftest.py  test_audio_utils.py  test_config.py  test_exceptions.py  test_silero_model.py  test_vad_wrapper.py
tools/: README.md  inspect_models.py  test_imports.py
websocket_service/: README.md  RequerimientosDeImplementacion.md  __init__.py  check_models.py  compile_java.bat  compile_java.sh  test_websocket_client.py  vad_websocket_server.py
websocket_service/clients/: __init__.py
websocket_service/clients/java/: VADClient.java
websocket_service/clients/java/gateway/: VADEventHandler.java  WebSocketGateway.java
websocket_service/clients/java/sources/: AudioSource.java  AudioSources.java  RealTimeMicSource.java  StoredAudioSource.java
websocket_service/clients/python/: __init__.py  vad_client.py  vad_websocket_client.py
websocket_service/clients/python/gateway/: websocket_gateway.py
websocket_service/clients/python/sources/: __init__.py  audio_sources.py
websocket_service/config/: service_config.yaml
websocket_service/server/: vad_websocket_server.py
